feat: atualização do .env.example, do README.md e criaçãp do CRUD de clientes

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,10 @@ DB_USER=root
 DB_PASSWORD=senha_aqui
 DB_NAME=fitback
 DB_PORT=3306
+
+# Configurações do banco de dados com o Digital Ocean
+username = seu_usuario
+password = sua_senha
+host = seu_host
+port = sua_porta
+database = nome_do_seu_BD
