--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,7 @@
-# Configurações do banco de dados MySQL
+# Configurações de banco de dados MySQL em ambiente local
 DB_HOST=localhost
 DB_USER=root
 DB_PASSWORD=senha_aqui
 DB_NAME=fitback
 DB_PORT=3306
 
-# Configurações do banco de dados com o Digital Ocean
-username = seu_usuario
-password = sua_senha
-host = seu_host
-port = sua_porta
-database = nome_do_seu_BD
